# Mockerino

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
boilerplate/: config.yaml
boilerplate/spec/: root.yaml
boilerplate/spec/hello/: root.yaml  world.yaml
src/: boilerplate.rs  config.rs  endpoint.rs  logger.rs  main.rs  request.rs  router.rs  spec_parser.rs  utils.rs
