[package]
name = "mockerino"
version = "0.1.3"
authors = ["Gaurav Saini <hello@gauravsaini.dev>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "2.33.3"
hyper = { version = "0.14", features = ["server"] }
tokio = { version = "1.8", features = ["full"] }
tokio-util = "0.6"
anyhow = "1.0"
log = "0.4"
simplelog = "^0.10.0"
routerify = "^2.1.0"
walkdir = "^2.3.2"
regex = "1"
reqwest = "0.11"
